-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.9.0 Beta 1, 5.9.0 Beta 2
-
None
-
macOS, qt-unified-testclient-mac-x64-2.0.5-1-online_130.dmg
qrc:/main.qml:43 module "QtWebView" is not installed
Edit: This is not WebView specific, the same issue can be observed with several other examples as well, e.g., The qthangman example from QtPurchasing and qmlweather from QtCharts.
- is duplicated by
-
QTBUG-60302 Qt for iOS: module "QtPurchasing" is not installed
-
- Closed
-
| For Gerrit Dashboard: QTBUG-59559 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 192420,2 | Fix bundling for iOS | 5.9 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 193428,2 | Fix bundling of module for static builds | 5.9.0 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 193429,2 | Fix bundling of module for static builds | 5.9.0 | qt/qtdatavis3d | Status: MERGED | +2 | 0 |
| 193430,2 | Fix bundling of module for static builds | 5.9.0 | qt/qtgamepad | Status: MERGED | +2 | 0 |
| 193431,2 | Fix bundling of module for static builds | 5.9.0 | qt/qtpurchasing | Status: MERGED | +2 | 0 |
| 193432,2 | Fix bundling of module for static builds | 5.9.0 | qt/qtscxml | Status: MERGED | +2 | 0 |
| 193433,2 | Fix bundling of module for static builds | 5.9.0 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 193460,2 | Fix bundling of module for static builds | 5.9.0 | qt/qtwebview | Status: MERGED | +2 | 0 |