Fix bundling of module for static builds

Without this patch the module is not bundled in static builds correctly
causing 'module "<QtModule>" is not installed' errors in during runtime.

As reference: this happens, because 'QQmlMetaType::isAnyModule(importUri)'
at 'qtdeclarative/src/qml/qml/qqmltypeloader.cpp:1422:' returns 'false',
which indicates that the module was not registered.

Task-number: QTBUG-59559
Change-Id: Ib8dc1fe6a1d16d06e037cfec4310528aef8fd9cb
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>