src/imports/purchasing/inapppurchase.cpp
@@ -34,6 +34,13 @@
 #include <QtPurchasing/qinappproduct.h>
 #include <QtPurchasing/qinapptransaction.h>
 
+static void initResources()
+{
+#ifdef QT_STATIC
+    Q_INIT_RESOURCE(qmake_QtPurchasing);
+#endif
+}
+
 QT_BEGIN_NAMESPACE
 
 class QInAppPurchaseModule : public QQmlExtensionPlugin
@@ -41,6 +48,7 @@ class QInAppPurchaseModule : public QQmlExtensionPlugin
     Q_OBJECT
     Q_PLUGIN_METADATA(IID QQmlExtensionInterface_iid)
 public:
+    QInAppPurchaseModule(QObject *parent = 0) : QQmlExtensionPlugin(parent) { initResources(); }
     void registerTypes(const char *uri)
     {
         Q_ASSERT(QLatin1String(uri) == QLatin1String("QtPurchasing"));
