src/imports/scxmlstatemachine/plugin.cpp
@@ -46,6 +46,13 @@
 #include <qqmlextensionplugin.h>
 #include <qqml.h>
 
+static void initResources()
+{
+#ifdef QT_STATIC
+    Q_INIT_RESOURCE(qmake_QtScxml);
+#endif
+}
+
 QT_BEGIN_NAMESPACE
 
 class QScxmlStateMachinePlugin : public QQmlExtensionPlugin
@@ -54,6 +61,7 @@ class QScxmlStateMachinePlugin : public QQmlExtensionPlugin
     Q_PLUGIN_METADATA(IID QQmlExtensionInterface_iid)
 
 public:
+    QScxmlStateMachinePlugin(QObject *parent = 0) : QQmlExtensionPlugin(parent) { initResources(); }
     void registerTypes(const char *uri)
     {
         // @uri QtScxml
